--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -34,11 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-5a25d5bd3a00>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-5a25d5bd3a00>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    for i in x return [expr(i)]\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "lst = [i for i in range(10)]\n",
+    "expr = lambda x: x + 2 \n",
+    "\n",
+    "lst = []\n",
+    "\n",
+    "def modify_list(x, expr):\n",
+    "    for i in x return [expr(i)] \n",
+    "\n",
+    "lst2 = modify_list(lst, expr)\n",
+    "\n",
+    "print(lst2)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -52,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "conv_cel_kel = lambda x: x + 273.15"
    ]
   },
   {
@@ -68,13 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]\n"
+     ]
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "k = [conv_cel_kel(x) for x in temps]\n",
+    "print(k)\n"
    ]
   },
   {
@@ -88,11 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mod = lambda x,y: 1 if y % x == 0 else 0\n",
+    "\n",
+    "mod(2,6)\n"
    ]
   },
   {
@@ -106,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +162,8 @@
     "    input: a number\n",
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
-    "    # Your code here:\n"
+    "    # Your code here:\n",
+    "    return lambda y: mod(a,y)\n"
    ]
   },
   {
@@ -127,11 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "divisible5 = divisor(5)\n"
    ]
   },
   {
@@ -143,18 +192,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -209,17 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-41823ae77805>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-41823ae77805>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    print(list3)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,2,4,4]\n",
     "list2 = [2,3,3,5]\n",
     "## Zip the lists together \n",
-    "\n",
+    "list3 = [list(zip(list1,list2))\n",
     "## Print the zipped list \n",
+    "         print(list3)\n",
     "\n",
-    "## Use a lambda expression to compare if: list1 element > list2 element\n"
+    "## Use a lambda expression to compare if: list1 element > list2 element\n",
+    "compare = lambda x, y: x > y\n",
+    "comparison = [compare(x[0], x [1]) for x in list3]\n",
+    "         \n",
+    "print(comparison)\n"
    ]
   },
   {
@@ -242,14 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Political Science', 'Essay'), ('Computer Science', 'Homework'), ('Engineering', 'Lab'), ('Mathematics', 'Module')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "list3 = list(zip(list1,list2))\n",
+    "courses = sorted(list3, key = lambda x : x[[1] [0]])\n",
+    "print(courses)"
    ]
   },
   {
@@ -296,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
